<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation.xml"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.volfam.barska.fragments.ListFragment"
        android:label="@string/list_fragment_label">

        <action
            android:id="@+id/action_listFragment_to_createFragment"
            app:destination="@id/createFragment"
            app:enterAnim="@anim/slide_in_anim"
            app:exitAnim="@anim/slide_out_anim"
            app:popEnterAnim="@anim/slide_in_anim"
            app:popExitAnim="@anim/slide_out_anim" />
        <action
            android:id="@+id/action_listFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/slide_in_anim"
            app:exitAnim="@anim/slide_out_anim"
            app:popEnterAnim="@anim/slide_in_anim"
            app:popExitAnim="@anim/slide_out_anim" />
        <action
            android:id="@+id/action_listFragment_to_filterFragment"
            app:destination="@id/filterFragment"
            app:enterAnim="@anim/slide_in_anim"
            app:exitAnim="@anim/slide_out_anim"
            app:popEnterAnim="@anim/slide_in_anim"
            app:popExitAnim="@anim/slide_out_anim">
            <argument
                android:name="maxPrice"
                app:argType="integer" />
        </action>

    </fragment>

    <fragment
        android:id="@+id/createFragment"
        android:name="com.volfam.barska.fragments.CreateFragment"
        android:label="@string/create_fragment_label" />

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.volfam.barska.fragments.DetailFragment"
        android:label="@string/training_details">
        <argument
            android:name="trainingId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/filterFragment"
        android:name="com.volfam.barska.fragments.FilterFragment"
        android:label="@string/filter_fragment_label"
        tools:layout="@layout/fragment_filter">
        <action
            android:id="@+id/action_filterFragment_to_filteredListFragment"
            app:destination="@id/filteredListFragment"
            app:enterAnim="@anim/slide_in_anim"
            app:exitAnim="@anim/slide_out_anim"
            app:popEnterAnim="@anim/slide_in_anim"
            app:popExitAnim="@anim/slide_out_anim"
            app:popUpTo="@+id/listFragment"
            app:popUpToInclusive="false">
            <argument
                android:name="groupArray"
                android:defaultValue="@null"
                app:argType="integer[]"
                app:nullable="true" />
            <argument
                android:name="trainerArray"
                android:defaultValue="@null"
                app:argType="integer[]"
                app:nullable="true" />
            <argument
                android:name="placeArray"
                android:defaultValue="@null"
                app:argType="integer[]"
                app:nullable="true" />
            <argument
                android:name="minPrice"
                app:argType="integer" />
            <argument
                android:name="maxPrice"
                app:argType="integer" />
        </action>
        <argument
            android:name="maxPrice"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/filteredListFragment"
        android:name="com.volfam.barska.fragments.FilteredListFragment"
        android:label="@string/filtered_list_fragment_label"
        tools:layout="@layout/fragment_list_filtered">
        <argument
            android:name="groupArray"
            android:defaultValue="@null"
            app:argType="integer[]"
            app:nullable="true" />
        <argument
            android:name="trainerArray"
            android:defaultValue="@null"
            app:argType="integer[]"
            app:nullable="true" />
        <argument
            android:name="placeArray"
            android:defaultValue="@null"
            app:argType="integer[]"
            app:nullable="true" />
        <argument
            android:name="minPrice"
            app:argType="integer" />
        <argument
            android:name="maxPrice"
            app:argType="integer" />
    </fragment>
</navigation>